btn spacing and gradient section fix

--- a/src/styles/custom-bootstrap.scss
+++ b/src/styles/custom-bootstrap.scss
@@ -52,7 +52,7 @@ body, #root {
         flex-direction: column;
         text-align: center;
         background: $gradient-1;
-        width: 25%;
+        width: 20%;
         min-height: 100vh;
         height: auto;
         color: $light;
